--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "server": "nodemon backend/server.js"
   },
   "author": "",
   "license": "ISC",
