--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@ckeditor/ckeditor5-build-classic": "^34.2.0",
+    "@ckeditor/ckeditor5-image": "^39.0.2",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^34.0.0",
+    "@ckeditor/ckeditor5-upload": "^34.0.0",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^0.26.1",
+    "buffer": "^6.0.3",
+    "create-react-app": "^5.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-render-html": "^0.6.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
