--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
     "create-react-app": "^1.2.1",
+    "dotenv": "^16.3.1",
     "html-react-parser": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -45,8 +46,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000/",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "//": [
+    "Forlocal development, I set the proxy to http://localhost:8000",
+    "For production, I set the proxy to https://nubewebdev.com"
+  ]
 }
