--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present
-    - run: echo "${{ secrets.DROPLET1 }}" | sudo -S rm -R /var/www/build
-    - run: echo "${{ secrets.DROPLET1 }}" | sudo -S mv /home/ipeteperez/backend-apps/mern-blog-cms-runner/react-app/mern-blog-cms/mern-blog-cms/build /var/www
+    - run: echo "${{ secrets.DROPLET1 }}" | sudo -S rm -R /var/www/cmsbuild/build
+    - run: echo "${{ secrets.DROPLET1 }}" | sudo -S mv /home/ipeteperez/backend-apps/mern-blog-cms-runner/react-app/mern-blog-cms/mern-blog-cms/build /var/www/cmsbuild
