--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^34.2.0",
-    "@ckeditor/ckeditor5-image": "^39.0.2",
     "@ckeditor/ckeditor5-react": "^5.1.0",
     "@ckeditor/ckeditor5-theme-lark": "^34.0.0",
-    "@ckeditor/ckeditor5-upload": "^34.0.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
+    "ckeditor5-custom-build": "file:ckeditor5-custom-build",
     "create-react-app": "^1.2.1",
     "html-react-parser": "^4.2.2",
     "react": "^17.0.2",
