--- a/ckeditor5-custom-build/package.json
+++ b/ckeditor5-custom-build/package.json
@@ -9,6 +9,7 @@
   "types": "./build/ckeditor.d.ts",
   "dependencies": {
     "@ckeditor/ckeditor5-adapter-ckfinder": "40.1.0",
+    "@ckeditor/ckeditor5-alignment": "^40.1.0",
     "@ckeditor/ckeditor5-autoformat": "40.1.0",
     "@ckeditor/ckeditor5-basic-styles": "40.1.0",
     "@ckeditor/ckeditor5-block-quote": "40.1.0",
