--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ckeditor5-custom-build": "file:ckeditor5-custom-build",
     "create-react-app": "^1.2.1",
     "html-react-parser": "^4.2.2",
+    "lit": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
